@@ -13,6 +13,7 @@ import io.github.jratatui.widgets.list.ListState;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static io.github.jratatui.dsl.Dsl.*;
@@ -26,8 +27,8 @@ class ListElementTest {
     @Test
     @DisplayName("ListElement fluent API chains correctly")
     void fluentApiChaining() {
-        var state = new ListState();
-        var element = list("Item 1", "Item 2", "Item 3")
+        ListState state = new ListState();
+        ListElement element = list("Item 1", "Item 2", "Item 3")
             .state(state)
             .highlightSymbol("> ")
             .highlightColor(Color.YELLOW)
@@ -41,28 +42,28 @@ class ListElementTest {
     @Test
     @DisplayName("list() creates empty element")
     void emptyList() {
-        var element = list();
+        ListElement element = list();
         assertThat(element).isNotNull();
     }
 
     @Test
     @DisplayName("list(String...) creates element with items")
     void listWithItems() {
-        var element = list("A", "B", "C");
+        ListElement element = list("A", "B", "C");
         assertThat(element).isNotNull();
     }
 
     @Test
     @DisplayName("list(List<String>) creates element with items")
     void listWithItemsList() {
-        var element = list(List.of("X", "Y", "Z"));
+        ListElement element = list(Arrays.asList("X", "Y", "Z"));
         assertThat(element).isNotNull();
     }
 
     @Test
     @DisplayName("items() method replaces items")
     void itemsMethod() {
-        var element = list()
+        ListElement element = list()
             .items("New 1", "New 2");
         assertThat(element).isNotNull();
     }
@@ -70,10 +71,10 @@ class ListElementTest {
     @Test
     @DisplayName("ListElement renders items to buffer")
     void rendersToBuffer() {
-        var area = new Rect(0, 0, 20, 5);
-        var buffer = Buffer.empty(area);
-        var frame = Frame.forTesting(buffer);
-        var state = new ListState();
+        Rect area = new Rect(0, 0, 20, 5);
+        Buffer buffer = Buffer.empty(area);
+        Frame frame = Frame.forTesting(buffer);
+        ListState state = new ListState();
 
         list("Item 1", "Item 2", "Item 3")
             .state(state)
@@ -88,10 +89,10 @@ class ListElementTest {
     @Test
     @DisplayName("ListElement with selection highlights item")
     void withSelection() {
-        var area = new Rect(0, 0, 20, 5);
-        var buffer = Buffer.empty(area);
-        var frame = Frame.forTesting(buffer);
-        var state = new ListState();
+        Rect area = new Rect(0, 0, 20, 5);
+        Buffer buffer = Buffer.empty(area);
+        Frame frame = Frame.forTesting(buffer);
+        ListState state = new ListState();
         state.select(1);
 
         list("Item 1", "Item 2", "Item 3")
@@ -108,10 +109,10 @@ class ListElementTest {
     @Test
     @DisplayName("Empty area does not render")
     void emptyAreaNoRender() {
-        var emptyArea = new Rect(0, 0, 0, 0);
-        var buffer = Buffer.empty(new Rect(0, 0, 10, 5));
-        var frame = Frame.forTesting(buffer);
-        var state = new ListState();
+        Rect emptyArea = new Rect(0, 0, 0, 0);
+        Buffer buffer = Buffer.empty(new Rect(0, 0, 10, 5));
+        Frame frame = Frame.forTesting(buffer);
+        ListState state = new ListState();
 
         // Should not throw
         list("A", "B").state(state).render(frame, emptyArea, RenderContext.empty());
@@ -120,9 +121,9 @@ class ListElementTest {
     @Test
     @DisplayName("ListElement without explicit state creates internal state")
     void internalState() {
-        var area = new Rect(0, 0, 20, 5);
-        var buffer = Buffer.empty(area);
-        var frame = Frame.forTesting(buffer);
+        Rect area = new Rect(0, 0, 20, 5);
+        Buffer buffer = Buffer.empty(area);
+        Frame frame = Frame.forTesting(buffer);
 
         // Should not throw even without state
         list("Item 1", "Item 2")
@@ -132,7 +133,7 @@ class ListElementTest {
     @Test
     @DisplayName("highlightSymbol sets the indicator")
     void highlightSymbol() {
-        var element = list("A", "B")
+        ListElement element = list("A", "B")
             .highlightSymbol("→ ");
         assertThat(element).isNotNull();
     }
@@ -140,7 +141,7 @@ class ListElementTest {
     @Test
     @DisplayName("highlightStyle sets the style")
     void highlightStyle() {
-        var element = list("A", "B")
+        ListElement element = list("A", "B")
             .highlightColor(Color.GREEN);
         assertThat(element).isNotNull();
     }
