@@ -7,6 +7,7 @@ package io.github.jratatui.widgets.table;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.DisplayName;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.*;
@@ -16,7 +17,7 @@ class TableStateTest {
     @Test
     @DisplayName("Initial state has no selection")
     void initialState() {
-        var state = new TableState();
+        TableState state = new TableState();
         assertThat(state.selected()).isNull();
         assertThat(state.offset()).isEqualTo(0);
     }
@@ -24,7 +25,7 @@ class TableStateTest {
     @Test
     @DisplayName("select sets the selected row")
     void select() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.select(5);
         assertThat(state.selected()).isEqualTo(5);
     }
@@ -32,7 +33,7 @@ class TableStateTest {
     @Test
     @DisplayName("select clamps to zero")
     void selectClampsToZero() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.select(-10);
         assertThat(state.selected()).isEqualTo(0);
     }
@@ -40,7 +41,7 @@ class TableStateTest {
     @Test
     @DisplayName("clearSelection removes selection")
     void clearSelection() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.select(3);
         state.clearSelection();
         assertThat(state.selected()).isNull();
@@ -49,7 +50,7 @@ class TableStateTest {
     @Test
     @DisplayName("selectFirst selects first row")
     void selectFirst() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.selectFirst();
         assertThat(state.selected()).isEqualTo(0);
     }
@@ -57,7 +58,7 @@ class TableStateTest {
     @Test
     @DisplayName("selectLast selects last row")
     void selectLast() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.selectLast(10);
         assertThat(state.selected()).isEqualTo(9);
     }
@@ -65,7 +66,7 @@ class TableStateTest {
     @Test
     @DisplayName("selectLast does nothing with zero rows")
     void selectLastEmpty() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.selectLast(0);
         assertThat(state.selected()).isNull();
     }
@@ -73,7 +74,7 @@ class TableStateTest {
     @Test
     @DisplayName("selectNext moves to next row")
     void selectNext() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.select(3);
         state.selectNext(10);
         assertThat(state.selected()).isEqualTo(4);
@@ -82,7 +83,7 @@ class TableStateTest {
     @Test
     @DisplayName("selectNext stops at last row")
     void selectNextAtEnd() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.select(9);
         state.selectNext(10);
         assertThat(state.selected()).isEqualTo(9);
@@ -91,7 +92,7 @@ class TableStateTest {
     @Test
     @DisplayName("selectNext selects first when nothing selected")
     void selectNextFromNull() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.selectNext(10);
         assertThat(state.selected()).isEqualTo(0);
     }
@@ -99,7 +100,7 @@ class TableStateTest {
     @Test
     @DisplayName("selectPrevious moves to previous row")
     void selectPrevious() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.select(5);
         state.selectPrevious();
         assertThat(state.selected()).isEqualTo(4);
@@ -108,7 +109,7 @@ class TableStateTest {
     @Test
     @DisplayName("selectPrevious stops at first row")
     void selectPreviousAtStart() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.select(0);
         state.selectPrevious();
         assertThat(state.selected()).isEqualTo(0);
@@ -117,7 +118,7 @@ class TableStateTest {
     @Test
     @DisplayName("selectPrevious selects first when nothing selected")
     void selectPreviousFromNull() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.selectPrevious();
         assertThat(state.selected()).isEqualTo(0);
     }
@@ -125,7 +126,7 @@ class TableStateTest {
     @Test
     @DisplayName("setOffset sets scroll offset")
     void setOffset() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.setOffset(10);
         assertThat(state.offset()).isEqualTo(10);
     }
@@ -133,7 +134,7 @@ class TableStateTest {
     @Test
     @DisplayName("setOffset clamps to zero")
     void setOffsetClampsToZero() {
-        var state = new TableState();
+        TableState state = new TableState();
         state.setOffset(-5);
         assertThat(state.offset()).isEqualTo(0);
     }
@@ -141,8 +142,8 @@ class TableStateTest {
     @Test
     @DisplayName("scrollToSelected adjusts offset to show selected row")
     void scrollToSelected() {
-        var state = new TableState();
-        var rows = List.of(
+        TableState state = new TableState();
+        List<Row> rows = Arrays.asList(
             Row.from("Row 1"),
             Row.from("Row 2"),
             Row.from("Row 3"),
